--- a/tetris/index.html
+++ b/tetris/index.html
@@ -11,8 +11,14 @@
     </div>
 
 
-    <script src="https://code.jquery.com/jquery-2.2.0.min.js"></script>
     <script type="text/javascript" src="js/main.js"></script>
+    <script src="https://code.jquery.com/jquery-2.2.0.min.js"></script>
     <script type="text/javascript" src="js/LoadPieces.js"></script>
+    <script type="text/javascript" src="js/CheckingForCollision.js"></script>
+    <script type="text/javascript" src="js/Gameboard.js"></script>
+    <script type="text/javascript" src="js/MainTetris.js"></script>
+    <script type="text/javascript" src="js/MoveTetris.js"></script>
+    <script type="text/javascript" src="js/NewPiece.js"></script>
+    <script type="text/javascript" src="js/Rotating.js"></script>
 </body>
 </html>
